# ai-game-generation-research

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  WORKFLOW.md  pyproject.toml
.gemini/: settings.json
config/: lanes.yaml  lanes_visual_upgrade_2026-05-13.yaml
docs/: PRD.md  asset_packet_validation_2026-05-13.md  asset_registry_v3_gate_2026-05-13.md  blender_host_proof_2026-05-13.md  capability_boundary_report_2026-05-11.md  chatgpt_pro_full_asset_factory_followup_2026-05-13.md  chatgpt_pro_github_review_brief_2026-05-13.md  chatgpt_pro_prompt_to_send_2026-05-13.md  coding_runner_mcp_skill_control_2026-05-13.md  computer_use_chatgpt_app_policy_gap_2026-05-12.md  current_best_practices_matrix_2026-05-12.md  dashboard_attention_buckets_2026-05-13.md  dev_environment_setup_2026-05-12.md  direct_download_policy_2026-05-12.md  download_registry_controller_update_2026-05-13.md  experiment_backlog.md  external_runner_efficiency_setup_2026-05-13.md  full_realism_execution_plan_2026-05-13.md  full_realism_lessons_and_best_practices_2026-05-13.md  game_development_thread_prompt_2026-05-12.md  game_p1_child_friendly_design_spec_2026-05-12.md  game_thread_goal_continue_p1_rover_workshop_2026-05-12.md  goal_completion_audit_2026-05-13.md  implementation_plan_local_ai_3d_asset_factory_tactical_visual_upgrade_2026-05-13.md  local_engine_host_probe_2026-05-13.md  m5_visible_asset_upgrade_plan_2026-05-13.md  mac_local_model_lane_2026-05-13.md  mac_local_runner_capacity_2026-05-13.md  managed_agents_execution_status_2026-05-12.md  (+52 more)
scenarios/: p0_smoke_g2.json  (+1 more)
(+559 files in other folders)
