[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-game-generation-research"
version = "0.1.0"
description = "Managed Codex agents and AI game-generation research workbench."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "jsonschema>=4.23",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.8",
]

[project.scripts]
codex-managed = "managed_codex.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
managed_codex = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP007", "UP045"]
